[package]
name = "rust-js"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
log = "0.4.0"
env_logger = "0.10.0"

minifb = "0.23"
deno_core = "0.164"
deno_ast = { version = "0.22", features = ["transpiling"] }
tokio = { version = "1", features = ["full"] }

reqwest = { version = "0.11", features = ["json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
